--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,1 +1,21 @@
-<p>content works!</p>
+<div class="layout"></div>
+<div class="top-bar">
+  <img class="logo" src="assets/image/logo.png" />
+  <div class="user-round">
+    <div class="user-round-text">
+      H
+    </div>
+  </div>
+</div>
+
+<div class="text-area-content">
+  <textarea
+    style="
+      resize: none;
+      width: 100%;
+      height: 100%;
+      font-family: sans-serif;
+      font-size: 10pt;
+    "
+  ></textarea>
+</div>
