--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<div class="back-image"></div>
+<div class="signin-card">
+  <img class="signin-logo" src="/assets/image/logo.png" />
+  <input class="input-email" type="email" for="email" />
+  <input class="input-pswd" type="password" for="password" />
+  <input class="signin-button" type="button" value="Signin">
+  <p ><a href="signup.component.html"class="create-acc">Create Account</a></p>
+</div>
+
