--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,9 @@
-<p>signup works!</p>
+<div class="back-image"></div>
+<div class="signup-card">
+  <img class="signup-logo" src="/assets/image/logo.png" />
+  <input class="input-email" type="email" for="email" />
+  <input class="input-pswd" type="password" for="password" />
+  <input class="input-cnfmpswd" type="password" for="confirm-password" />
+  <p ><a href="create-account()" class="create-acc">Create Account</a></p>
+</div>
+
