--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,6 +4,6 @@
   <input class="input-email" type="email" for="email" />
   <input class="input-pswd" type="password" for="password" />
   <input class="signin-button" type="button" value="Signin">
-  <p ><a href="signup.component.html"class="create-acc">Create Account</a></p>
+  <p ><a href="/signup.component.html"class="create-acc">Create Account</a></p>
 </div>
 
