--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,91 +1,90 @@
 .back-image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: -19px;
-  
-    background: url(src/assets/image/back.jpeg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    filter: blur(1px);
-    transform: matrix(-1, 0, 0, 1, 0, 0);
-  }
-  
-  .signup-card {
-    position: absolute;
-    width: 40%;
-    height: 75%;
-    left: 29%;
-    top: 13%;
-  
-    background: #ffffff;
-    opacity: 0.69;
-    border-radius: 10px;
-  }
-  
-  .signup-logo {
-    position: absolute;
-    width: 30%;
-    height: 30%;
-    left: 37%;
-    top: 4%;
-    background: url(src/assets/image/logo.png);
-  }
-  
-  .input-email {
-    position: absolute;
-    width: 43%;
-    height: 7%;
-    left: 29%;
-    top: 39%;
-  
-    background: #ebe9e9;
-    opacity: 0.6;
-    border-radius: 10px;
-  }
-  .input-pswd {
-    position: absolute;
-    width: 43%;
-    height: 7%;
-    left: 29%;
-    top: 55%;
-  
-    background: #ebe9e9;
-    opacity: 0.6;
-    border-radius: 10px;
-  }
-  .input-cnfmpswd {
-    position: absolute;
-    width: 43%;
-    height: 7%;
-    left: 29%;
-    top: 71%;
-  
-    background: #ebe9e9;
-    opacity: 0.6;
-    border-radius: 10px;
-  }
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: -19px;
 
-  .create-acc {
-    /* Create Account */
-  
-    position: absolute;
-    width: 30%;
-    height: 6%;
-    left: 40%;
-    top: 89%;
-    text-decoration: none;
-  
-    font-family: Questrial;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 120%;
-    line-height: 100%;
-  
-    color: rgb(24, 139, 216);
-  
-    transform: rotate(-0.39deg);
-  }
- 
-  
+  background: url(src/assets/image/back.jpeg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  filter: blur(1px);
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+
+.signup-card {
+  position: absolute;
+  width: 40%;
+  height: 75%;
+  left: 29%;
+  top: 13%;
+
+  background: #ffffff;
+  opacity: 0.69;
+  border-radius: 10px;
+}
+
+.signup-logo {
+  position: absolute;
+  width: 35%;
+  height: 30%;
+  left: 33%;
+  top: 1%;
+  padding-top: 3px;
+  background: url(src/assets/image/logo3.png);
+}
+
+.input-email {
+  position: absolute;
+  width: 43%;
+  height: 7%;
+  left: 29%;
+  top: 39%;
+
+  background: #ebe9e9;
+  opacity: 0.6;
+  border-radius: 10px;
+}
+.input-pswd {
+  position: absolute;
+  width: 43%;
+  height: 7%;
+  left: 29%;
+  top: 55%;
+
+  background: #ebe9e9;
+  opacity: 0.6;
+  border-radius: 10px;
+}
+.input-cnfmpswd {
+  position: absolute;
+  width: 43%;
+  height: 7%;
+  left: 29%;
+  top: 71%;
+
+  background: #ebe9e9;
+  opacity: 0.6;
+  border-radius: 10px;
+}
+
+.create-acc {
+  /* Create Account */
+
+  position: absolute;
+  width: 30%;
+  height: 6%;
+  left: 40%;
+  top: 89%;
+  text-decoration: none;
+
+  font-family: Questrial;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 120%;
+  line-height: 100%;
+
+  color: rgb(24, 139, 216);
+
+  transform: rotate(-0.39deg);
+}
