--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,10 +1,11 @@
 <div class="layout"></div>
 <div class="top-bar">
   <img class="logo" src="assets/image/logo.png" />
-  <div class="user-round">
+  <div class="user-round" (click)="logoutToggle()">
     <div class="user-round-text">
-      H
+      {{userIcon}}
     </div>
+    <div class="logout" *ngIf="logout" (click)="logoutFunc()">Logout</div>
   </div>
 </div>
 
@@ -16,6 +17,7 @@
       height: 100%;
       font-family: sans-serif;
       font-size: 10pt;
+      border-radius: 10px;
     "
   ></textarea>
 </div>
