--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,6 @@
 <div class="layout"></div>
 <div class="top-bar">
-  <img class="logo" src="assets/image/logo.png" />
+  <img class="logo" src="assets/image/logo3.png" />
   <div class="user-round" (click)="logoutToggle()">
     <div class="user-round-text">
       {{userIcon}}
