1.connected loging with db 2.register to db added 3.mongodb hosted 4.server is up and running 5.production build

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,5 +22,5 @@
     value="Sign in"
     (click)="login()"
   />
-  <p><a href="/signup" class="create-acc">Create Account</a></p>
+  <p><a (click)="signUp()" class="create-acc">Create Account</a></p>
 </div>
