--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -46,6 +46,7 @@
   font-size: 35px;
   line-height: 35px;
   color: #ffffff;
+  align-self: center;
 }
 
 .logo {
@@ -69,7 +70,7 @@
   font-size: 20pt;
 }
 
-.logout{
+.logout {
   position: absolute;
   width: 104px;
   height: 21px;
@@ -79,4 +80,60 @@
   background: #dfdede;
   cursor: pointer;
   text-align: center;
+}
+
+.textbox {
+  resize: none;
+  width: 100%;
+  height: 100%;
+  font-family: sans-serif;
+  font-size: 10pt;
+  border-radius: 4px;
+  border: 0px;
+}
+
+@media only screen and (max-width: 600px) {
+  .text-area-content {
+    position: absolute;
+    width: 95%;
+    height: 100%;
+    left: 2%;
+    top: 12%;
+    right: 4%;
+    opacity: 0.75;
+    backdrop-filter: blur(4px);
+    font-family: sans-serif;
+    font-size: 20pt;
+  }
+
+  .logo {
+    position: absolute;
+    width: 25%;
+    height: 130%;
+    left: 0;
+    top: 0;
+    background: url(/assets/image/logo.png);
+  }
+
+  .user-round {
+    position: absolute;
+    width: 15%;
+    height: 62%;
+    left: 80%;
+    top: 31%;
+    border-radius: 75px;
+    background: #a2b6ff;
+    cursor: pointer;
+    text-align: center;
+  }
+
+  .textbox {
+    resize: none;
+    width: 100%;
+    height: 100%;
+    font-family: sans-serif;
+    font-size: 10pt;
+    border-radius: 0px;
+    border: 0px;
+  }
 }
