--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -11,15 +11,7 @@
 
 <div class="text-area-content">
   <textarea
-    style="
-      resize: none;
-      width: 100%;
-      height: 100%;
-      font-family: sans-serif;
-      font-size: 10pt;
-      border-radius: 4px;
-      border: 0px;
-    "
+    class="textbox"
     [(ngModel)]="content"
     (input)="update(content)"
   ></textarea>
