--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -35,18 +35,15 @@
 }
 
 .user-round-text {
-  position: absolute;
-  width: 10%;
-  height: 22%;
-  left: 27%;
-  top: 10%;
+  position: relative;
   font-family: "Questrial";
   font-style: normal;
   font-weight: normal;
   font-size: 35px;
   line-height: 35px;
   color: #ffffff;
-  align-self: center;
+  text-align: center;
+  top:17%;
 }
 
 .logo {
@@ -93,10 +90,24 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .layout {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: -19px;
+  
+    background: url(/assets/image/back.jpeg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    filter: blur(2px);
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+  }
+  
   .text-area-content {
     position: absolute;
     width: 95%;
-    height: 100%;
+    height: 87%;
     left: 2%;
     top: 12%;
     right: 4%;
