max height mobile fix

--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -117,7 +117,7 @@
   .signup-card {
     position: absolute;
     width: 96%;
-    height: 75%;
+    height: 550px;
     left: 2%;
     top: 13%;
   
