--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -90,6 +90,19 @@
 }
 
 @media only screen and (max-width: 600px) {
+
+  .top-bar {
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    left: 0px;
+    top: -19px;
+  
+    background: #ffffff;
+    opacity: 0.74;
+  }
+
+
   .layout {
     position: absolute;
     width: 100%;
@@ -109,7 +122,7 @@
     width: 95%;
     height: 87%;
     left: 2%;
-    top: 12%;
+    top: 100px;
     right: 4%;
     opacity: 0.75;
     backdrop-filter: blur(4px);
