--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -115,11 +115,11 @@
   }
 
   .signup-card {
-    position: absolute;
+    position: sticky;
     width: 96%;
     height: 550px;
     left: 2%;
-    top: 13%;
+    margin-top: 20%;
   
     background: #ffffff;
     opacity: 0.69;
