--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -100,11 +100,109 @@
 }
 
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:600px) {
+  .back-image {
+    position: absolute;
+    width: 100%;
+    height: 740px;
+    left: 0;
+    top: -19px;
+  
+    background: url(src/assets/image/back.jpeg);
+    background-repeat: no-repeat;
+    background-size: 200% 100%;
+    filter: blur(1px);
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+  }
+  .signin-card {
+    position: sticky;
+    width: 96%;
+    height: 450px;
+    left: 2%;
+    margin-top: 13%;
+  
+    background: #ffffff;
+    opacity: 0.69;
+    border-radius: 10px;
+  }
+  .signin-logo {
+    position: absolute;
+    width: 60%;
+    height: 150px;
+    left: 20%;
+    top: 1%;
+    padding-top: 3px;
+    background: url(src/assets/image/logo3.png);
+  }
+  .input-email {
+    position: absolute;
+    width: 80%;
+    height: 7%;
+    left: 10%;
+    top: 34%;
+    opacity: 0.9;
+    background: #ebe9e9;
+    opacity: 0.6;
+    border:0px;
+    border-radius: 7px;
+
+    text-align: center;
+  }
+  .input-pswd {
+    position: absolute;
+    width: 80%;
+    height: 7%;
+    left: 10%;
+    top: 45%;
+    opacity: 0.9;
+    border:0px;
+    background: #ebe9e9;
+    opacity: 0.6;
+    border-radius: 7px;
+    text-align: center;
+  }
+  .signin-button {
+    position: absolute;
+    width: 30%;
+    height: 6%;
+    left: 35%;
+    top: 60%;
+  
+    font-family: Questrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 110%;
+    line-height: 100%;
+  
+    color: rgb(24, 139, 216);
+    transform: rotate(-0.39deg);
+  }
+  .create-acc {
+    position: absolute;
+    width: 40%;
+    height: 6%;
+    left: 35%;
+    top: 75%;
+    text-decoration: none;
+  
+    font-family: Questrial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 100%;
+    line-height: 100%;
+  
+    color: rgb(24, 139, 216);
+  
+    transform: rotate(-0.39deg);
+  }
+}
+
+/*
+@media only screen and (max-height:600px) {
   .signin-card {
     position: absolute;
     width: 96%;
-    height: 70%;
+    height: 90%;
     left: 2%;
     top: 13%;
   
@@ -182,4 +280,4 @@
   
     transform: rotate(-0.39deg);
   }
-}
+}*/
