web host fix  and images fix

--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -5,7 +5,7 @@
   left: 0px;
   top: -19px;
 
-  background: url(/assets/image/back.jpeg);
+  background: url(src/assets/image/back.jpeg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   filter: blur(2px);
