--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="back-image"></div>
 <div class="signup-card">
-  <img class="signup-logo" src="/assets/image/logo.png" />
+  <img class="signup-logo" src="assets/image/logo.png" />
     <input
       class="input-email"
       type="email"
