--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="back-image"></div>
 <div class="signin-card">
-  <img class="signin-logo" src="/assets/image/logo.png" />
+  <img class="signin-logo" src="assets/image/logo.png" />
   <input
     class="input-email"
     type="email"
